--- a/main.css
+++ b/main.css
@@ -18,10 +18,13 @@ nav.navbar {
 }
 
 hr.divider {
-  border-color: rgb(179, 152, 203);
   width: 50vw;
   margin-top: 3vh;
   margin-bottom: 1vh;
+  background-image: -webkit-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
 }
 
 .game-board {
