--- a/main.css
+++ b/main.css
@@ -5,6 +5,11 @@
   back
 }
 
+h2 {
+  margin-top: 0px;
+  text-align: center;
+}
+
 nav.navbar {
   margin-bottom: 0px;
   padding: 0;
@@ -21,50 +26,49 @@ hr.divider {
   width: 50vw;
   margin-top: 3vh;
   margin-bottom: 1vh;
+  border: 0;
+  height: 3px;
   background-image: -webkit-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
   background-image: -moz-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
   background-image: -ms-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
   background-image: -o-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
 }
 
-.game-board {
-  height: 65vh;
-  margin-top: 2vh;
-  margin-bottom: 1vh;
-  padding: 0;
+.board {
+  background-color: rgb(194,208,215);
+  border: 1px solid rgb(1, 2, 83);
+  height: 390px;
+  width: 485px;
+  margin: 50px auto;
 }
 
-table {
-  height: 100%;
-  width: 100%;
+.game-col {
+  height: 380px;
+  width: 69px;
+  float: left;
+  padding-top: 10px;
 }
 
-td {
-  background-color: rgb(203, 222, 224);
-  border: 1px solid rgb(42, 42, 42);
-}
-
-td.button  {
-  border: none;
+.game-slot {
+  height: 55px;
+  width: 55px;
   background-color: white;
-  text-align: center;
+  border-radius: 50%;
+  border: 1px solid rgb(1, 2, 83);
+  margin: 5px auto;
+}
+
+.game-slot:hover {
+  background-color: rgba(128, 177, 125, .7);
 }
 
 .btn {
-  background-color: inherit;
+  background-color: white;
   border: 1px solid rgb(42, 42, 42);
 }
 
 .btn:hover {
-  background-color: rgb(203, 222, 224);
-}
-
-.game-info {
-  height: 10vh;
-  text-align: center;
-}
-
-h2 .game-message {
-  margin-top: 0px;
-  text-align: center;
+  background-color: rgb(42, 42, 42);
+  color: white;
+  border: 1px solid white;
 }
