--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ h2 {
 nav.navbar {
   margin-bottom: 0px;
   padding: 0;
-  height: 7vh;
+  height: 9vh;
   width: 100vw;
 }
 
@@ -24,14 +24,17 @@ nav.navbar {
 
 hr.divider {
   width: 50vw;
-  margin-top: 3vh;
+  margin-top: 2vh;
   margin-bottom: 1vh;
-  border: 0;
-  height: 3px;
+  height: 2px;
   background-image: -webkit-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
   background-image: -moz-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
   background-image: -ms-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
   background-image: -o-linear-gradient(left, #f0f0f0, rgb(95, 77, 129), #f0f0f0);
+}
+
+.game-board {
+  height: 460px;
 }
 
 .board {
@@ -39,7 +42,7 @@ hr.divider {
   border: 1px solid rgb(1, 2, 83);
   height: 390px;
   width: 485px;
-  margin: 50px auto;
+  margin: 30px auto;
 }
 
 .game-col {
@@ -60,6 +63,10 @@ hr.divider {
 
 .game-slot:hover {
   background-color: rgba(128, 177, 125, .7);
+}
+
+.game-info {
+  text-align: center;
 }
 
 .btn {
